--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "axios": "^1.8.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.479.0",
+    "mongoose": "^8.12.1",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -32,6 +38,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "22.13.10",
     "@types/react": "19.0.10",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "5.8.2"
   }
 }
