--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19.0.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
